Fix WebKitTestRunner's jscOption configuration https://bugs.webkit.org/show_bug.cgi?id=248006 rdar://102445778

Reviewed by Chris Dumez.

250473@main removed Reset message to InjectedBundle before starting a test to fix flaky language setting issue.
However, this broke jscOption since the code was expecting that Reset message is sent before running test,
and we were setting jscOption at that timing.
This patch recovers Reset message and instead, we add ResetStage field to the message so that InjectedBundle can
avoid running language setting etc. for ResetStage::BeforeTest case while it sets jscOption for the test.

* Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::didReceiveMessageToPage):
* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::resetStateToConsistentValues):

Canonical link: https://commits.webkit.org/256767@main